fixed width issue on mobile

--- a/styles/project.css
+++ b/styles/project.css
@@ -252,4 +252,8 @@ hr{
         width: 100%;
         gap: 5px;
     }
+
+    .title-container{
+        height: auto;
+    }
 }
